<resources>
    <!-- General -->
    <string name="app_name">superior_Intelligence</string>

    <!-- Text -->
    <string name="first_last_name_text">First Last</string>
    <string name="username_text">Username</string>
    <string name="user_preferences_text">User Preferences</string>
    <string name="mood_following_text">Mood Following</string>
    <string name="privacy_text">Privacy</string>
    <string name="emotional_trigger">What triggered this mood?</string>
    <string name="emotional_trigger_textbox_hint">Type here (Optional)</string>


    <!-- Header Text -->
    <string name="Photo_header_title">Add a Photo to your Event</string>
    <string name="user_profile_header_title">User Profile</string>
    <string name="photo_access_permission_header_title">Access Permission</string>
    <string name="create_untitled_mood_event">Untitled</string>
    <string name="mood_events_page_header">Mood Events</string>
    <string name="mood_History_header">Mood Events History</string>

    <!-- Body Text -->
    <string name="permission_camera_message">Allow APP to access your Camera to take pictures.</string>
    <string name="permission_gallery_message">Allow APP to access your Photo Gallery to upload images.</string>

    <!-- Button Text -->
    <string name="confirm_button_text">Confirm</string>
    <string name="deny_button_text">Deny</string>
    <string name="allow_button_text">Allow</string>
    <string name="ok_button_text">OK</string>

    <!-- Dropdown Menu Text -->
    <string name="emotional_state_text">How are you feeling?</string>

    <string-array name="emotional_state_list">
        <item>Anger</item>
        <item>Confusion</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Sadness</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>

    <string-array name="social_situation_list">
        <item>Alone</item>
        <item>With one other person</item>
        <item>With two to several people</item>
        <item>With a crowd</item>
    </string-array>

    <string-array name="filter_options">
        <item>Select filter…</item>
        <item>Show posts from last 7 days</item>
        <item>Filter by emotional state</item>
        <item>Filter by text</item>
        <item>Clear filter</item>

    </string-array>

    <!-- Content Descriptions -->
    <string name="content_desc_tool_icon">Tool Icon</string>
    <string name="content_desc_search_icon">Search Icon</string>
    <string name="content_desc_lock_icon">Lock Icon</string>
    <string name="content_desc_arrow_icon">Simple Arrow Icon</string>
    <string name="content_desc_profile_image">Profile Image Container</string>
    <string name="content_desc_photo">Placeholder for uploaded photo</string>
    <string name="content_desc_camera_icon">Button to take a photo</string>
    <string name="content_desc_upload_icon">Change or upload a photo</string>
    <string name="content_desc_confirm_icon">Confirm</string>
    <string name="content_desc_perfect_icon">Confirm selection</string>
    <string name="content_desc_back_icon">Back</string>
    <string name="content_desc_edit_profile_icon">Edit Profile</string>
    <string name="content_desc_add_button_icon">+</string>
    <string name="content_desc_rounded_add_photo_icon">Button for adding a photo</string>
    <string name="unknown_permission_request">Unknown permission request.</string>

    <!-- Error Messages -->
    <string name="image_size_exceeded_title">Image size exceed limit</string>
    <string name="image_size_exceeded_message">Image must be under 65536 bytes</string>
    <string name="mood_explanation_hint">Quick explanation for your mood!</string>
    <string name="map_toolbar">Mood Map</string>
    <string name="select_emotion_prompt">Select Emotion Prompt</string>
    <string name="comments">Comments</string>
    <string name="posted_by">Posted by:</string>
    <string name="date">Date:</string>
    <string name="social_situation_with_friends">Social Situation: With Friends</string>
    <string name="reason_passed_my_exam">Reason: Passed my exam!</string>
    <string name="mood">Mood:</string>
    <string name="event_image">Event Image</string>
    <string name="event_title">Event Title</string>
    <string name="excited">Excited</string>

</resources>